structmeta-tests/tests/compile_fail/struct_meta/not_parse.stderr
error[E0277]: the trait bound `NotParse: Parse` is not satisfied
 --> tests/compile_fail/struct_meta/not_parse.rs:3:16
  |
3 |     not_parse: NotParse,
  |     ---------  ^^^^^^^^ unsatisfied trait bound
  |     |
  |     required by a bound introduced by this call
  |
help: the trait `Parse` is not implemented for `NotParse`
 --> tests/compile_fail/struct_meta/not_parse.rs:5:1
  |
5 | struct NotParse;
  | ^^^^^^^^^^^^^^^
  = help: the following other types implement trait `Parse`:
            Abstract
            AndAnd
            AndEq
            AngleBracketedGenericArguments
            Arm
            As
            At
            Auto
          and $N others
note: required by a bound in `ParseBuffer::<'a>::parse`
 --> $CARGO/syn-$VERSION/src/parse.rs
  |
  |     pub fn parse<T: Parse>(&self) -> Result<T> {
  |                     ^^^^^ required by this bound in `ParseBuffer::<'a>::parse`
